Migration db successfully

--- a/StudentAdminPortal.API/appsettings.json
+++ b/StudentAdminPortal.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "StudentAdminPortalDb": "server = .; database = StudentAdminPortal;User Id = sa; Password = Giang@0240; Trusted_Connection = true;TrustServerCertificate=True"
+  }
 }
